section-info-join

--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -17,8 +17,10 @@
                        <option value="Russ">Russ</option>
                    </select>
                </form>
-               <button class="section-navigation__btn-menu">Записатись</button>
-           </div>
+               <div class="section-navigation__block-btn-menu">
+                <button class="section-navigation__btn-menu">Записатись</button>
+            </div>
+            </div>
         </div>
     </section>
 </header>
