--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="stop-scroll">
     @@include('_header.html')
     @@include('_main.html')
     <!-- <div class="social-network">
