--- a/src/html/_main.html
+++ b/src/html/_main.html
@@ -64,33 +64,57 @@
     </section>
     <section class="main__section-info-join section-info-join">
         <div class="section-info-join__wrapper container">
-        <h2 class="section-info-join__title-text">Як приєднатись до нас?</h2>
-        <div class="section-info-join__block-with-description-actions ">
-        <div class="section-info-join__block-with-action">
-            <img class="section-info-join__img-info" src="./img/main/bell.svg" alt="bell">
-            <span class="section-info-join__number-actions">1</span>
-            <p class="section-info-join__description-text">1. Залиште заявку на сайті для безкоштовної консультації по телефону</p>
+            <h2 class="section-info-join__title-text">Як приєднатись до нас?</h2>
+            <div class="section-info-join__block-with-description-actions ">
+                <div class="section-info-join__block-with-action">
+                    <img class="section-info-join__img-info" src="./img/main/bell.svg" alt="bell">
+                    <span class="section-info-join__number-actions">1</span>
+                    <p class="section-info-join__description-text">1. Залиште заявку на сайті для безкоштовної
+                        консультації по телефону</p>
+                </div>
+                <div class="section-info-join__block-with-action">
+                    <img class="section-info-join__img-info" src="./img/main/date-and-time.svg" alt="date-and-time">
+                    <span class="section-info-join__number-actions">2</span>
+                    <p class="section-info-join__description-text">2. Оберіть місце, дату та час проведення вступного
+                        заняття з репетитором</p>
+                </div>
+                <div class="section-info-join__block-with-action">
+                    <img class="section-info-join__img-info" src="./img/main/testing.svg" alt="testing">
+                    <span class="section-info-join__number-actions">3</span>
+                    <p class="section-info-join__description-text">3. Пройдіть тестування, отримайте результат та
+                        рекомендації по навчанню</p>
+                </div>
+                <div class="section-info-join__block-with-action">
+                    <img class="section-info-join__img-info" src="./img/main/welcome.svg" alt="welcome">
+                    <span class="section-info-join__number-actions">4</span>
+                    <p class="section-info-join__description-text">4. Складіть зручний графік навчання і ласкаво просимо
+                        в сім’ю Math Corporation</p>
+                </div>
+                <img class="section-info-join__dotted-line" src="./img/main/desktop/dotted-line.svg" alt="dotted-line">
+            </div>
+            <div class="section-info-join__wrapper-for-btn">
+                <button class="section-info-join__btn">Записатись</button>
+            </div>
         </div>
-        <div class="section-info-join__block-with-action">
-            <img class="section-info-join__img-info" src="./img/main/date-and-time.svg" alt="date-and-time">
-            <span class="section-info-join__number-actions">2</span>
-            <p class="section-info-join__description-text">2. Оберіть місце, дату та час проведення вступного заняття з репетитором</p>
+    </section>
+    <section class="main__section-with-prices section-with-prices">
+        <div class="section-with-prices__wrapper container">
+            <h2 class="section-with-prices__title-text">Ціни</h2>
+            <p class="section-with-prices__under-text">Оберіть предмет, щоб спробувати нашу методику навчання</p>
+            <div class="section-with-prices__block-prices">
+                <div class="section-with-prices__block-price block-price">
+                    <img class="block-price__img" src="./img/main/mathematics-img.svg" alt="mathematics">
+                    <p class="block-price__thing">Математика (алгебра, геометрія)</p>
+                    <span class="block-price__price">300 грн/год</span>
+                    <button class="block-price__btn">Хочу спробувати</button>
+                </div>
+                <div class="section-with-prices__block-price block-price block-price--height">
+                    <img class="block-price__img" src="./img/main/physics.svg" alt="physics">
+                    <p class="block-price__thing">Математика (алгебра, геометрія)</p>
+                    <span class="block-price__price">300 грн/год</span>
+                    <button class="block-price__btn">Хочу спробувати</button>
+                </div>
+            </div>
         </div>
-        <div class="section-info-join__block-with-action">
-            <img class="section-info-join__img-info" src="./img/main/testing.svg" alt="testing">
-            <span class="section-info-join__number-actions">3</span>
-            <p class="section-info-join__description-text">3. Пройдіть тестування, отримайте результат та рекомендації по навчанню</p>
-        </div>
-        <div class="section-info-join__block-with-action">
-            <img class="section-info-join__img-info" src="./img/main/welcome.svg" alt="welcome">
-            <span class="section-info-join__number-actions">4</span>
-            <p class="section-info-join__description-text">4. Складіть зручний графік навчання і ласкаво просимо в сім’ю Math Corporation</p>
-        </div>
-        <img class="section-info-join__dotted-line" src="./img/main/desktop/dotted-line.svg" alt="dotted-line">
-    </div>
-    <div class="section-info-join__wrapper-for-btn">
-    <button class="section-info-join__btn">Записатись</button>
-</div>
-</div>
     </section>
 </main>
