--- a/src/html/_main.html
+++ b/src/html/_main.html
@@ -117,4 +117,65 @@
             </div>
         </div>
     </section>
+    <section class="main__section-our-teachers section-our-teachers">
+        <div class="section-our-teachers__wrapper container">
+            <h2 class="section-our-teachers__title-text">Наші викладачі</h2>
+            <div class="section-our-teachers__blocks-with-info-teacher">
+                <div class="section-our-teachers__block-about-teacher block-about-teacher block-about-teacher--active">
+                    <img class="block-about-teacher__img-teacher" src="./img/main/teacher.png" alt="teacher">
+                    <h4 class="block-about-teacher__name">Андрій Стулішенко, 25 років</h4>
+                    <span class="block-about-teacher__grade"></span>
+                    <div class="block-about-teacher__basic-info">
+                        <span class="block-about-teacher__info">Спеціалізація:</span>
+                        <p class="block-about-teacher__experience">математика (алгебра, геометрія)</p>
+                    </div>
+                    <div class="block-about-teacher__basic-info">
+                        <span class="block-about-teacher__info">Досвід:</span>
+                        <p class="block-about-teacher__experience">5 років викладання</p>
+                    </div>
+                    <div class="block-about-teacher__basic-info">
+                        <span class="block-about-teacher__info">Ocвіта:</span>
+                        <p class="block-about-teacher__experience">прикладна математика КПІ</p>
+                    </div>
+                </div>
+                <div class="section-our-teachers__block-about-teacher block-about-teacher">
+                    <img class="block-about-teacher__img-teacher" src="./img/main/teacher.png" alt="teacher">
+                    <h4 class="block-about-teacher__name">Андрій Стулішенко, 25 років</h4>
+                    <span class="block-about-teacher__grade"></span>
+                    <div class="block-about-teacher__basic-info">
+                        <span class="block-about-teacher__info">Спеціалізація:</span>
+                        <p class="block-about-teacher__experience">математика (алгебра, геометрія)</p>
+                    </div>
+                    <div class="block-about-teacher__basic-info">
+                        <span class="block-about-teacher__info">Досвід:</span>
+                        <p class="block-about-teacher__experience">5 років викладання</p>
+                    </div>
+                    <div class="block-about-teacher__basic-info">
+                        <span class="block-about-teacher__info">Ocвіта:</span>
+                        <p class="block-about-teacher__experience">прикладна математика КПІ</p>
+                    </div>
+                </div>
+                <div class="section-our-teachers__block-about-teacher block-about-teacher">
+                    <img class="block-about-teacher__img-teacher" src="./img/main/teacher.png" alt="teacher">
+                    <h4 class="block-about-teacher__name">Андрій Стулішенко, 25 років</h4>
+                    <span class="block-about-teacher__grade"></span>
+                    <div class="block-about-teacher__basic-info">
+                        <span class="block-about-teacher__info">Спеціалізація:</span>
+                        <p class="block-about-teacher__experience">математика (алгебра, геометрія)</p>
+                    </div>
+                    <div class="block-about-teacher__basic-info">
+                        <span class="block-about-teacher__info">Досвід:</span>
+                        <p class="block-about-teacher__experience">5 років викладання</p>
+                    </div>
+                    <div class="block-about-teacher__basic-info">
+                        <span class="block-about-teacher__info">Ocвіта:</span>
+                        <p class="block-about-teacher__experience">прикладна математика КПІ</p>
+                    </div>
+                </div>
+            </div>
+            <div class="section-our-teachers__block-btn-teacher">
+                <button class="section-our-teachers__btn-teacher btn-teacher--show">Інші викладачі</button>
+            </div>
+        </div>
+    </section>
 </main>
