--- a/src/html/_main.html
+++ b/src/html/_main.html
@@ -120,8 +120,60 @@
     <section class="main__section-our-teachers section-our-teachers">
         <div class="section-our-teachers__wrapper container">
             <h2 class="section-our-teachers__title-text">Наші викладачі</h2>
+            <div class="section-our-teachers__wrapper-blocks-with-info-teacher">
             <div class="section-our-teachers__blocks-with-info-teacher">
                 <div class="section-our-teachers__block-about-teacher block-about-teacher block-about-teacher--active">
+                    <img class="block-about-teacher__img-teacher" src="./img/main/teacher.png" alt="teacher">
+                    <h4 class="block-about-teacher__name">Андрій Стулішенко, 25 років</h4>
+                    <span class="block-about-teacher__grade"></span>
+                    <div class="block-about-teacher__basic-info">
+                        <span class="block-about-teacher__info">Спеціалізація:</span>
+                        <p class="block-about-teacher__experience">математика (алгебра, геометрія)</p>
+                    </div>
+                    <div class="block-about-teacher__basic-info">
+                        <span class="block-about-teacher__info">Досвід:</span>
+                        <p class="block-about-teacher__experience">5 років викладання</p>
+                    </div>
+                    <div class="block-about-teacher__basic-info">
+                        <span class="block-about-teacher__info">Ocвіта:</span>
+                        <p class="block-about-teacher__experience">прикладна математика КПІ</p>
+                    </div>
+                </div>
+                <div class="section-our-teachers__block-about-teacher block-about-teacher">
+                    <img class="block-about-teacher__img-teacher" src="./img/main/teacher.png" alt="teacher">
+                    <h4 class="block-about-teacher__name">Андрій Стулішенко, 25 років</h4>
+                    <span class="block-about-teacher__grade"></span>
+                    <div class="block-about-teacher__basic-info">
+                        <span class="block-about-teacher__info">Спеціалізація:</span>
+                        <p class="block-about-teacher__experience">математика (алгебра, геометрія)</p>
+                    </div>
+                    <div class="block-about-teacher__basic-info">
+                        <span class="block-about-teacher__info">Досвід:</span>
+                        <p class="block-about-teacher__experience">5 років викладання</p>
+                    </div>
+                    <div class="block-about-teacher__basic-info">
+                        <span class="block-about-teacher__info">Ocвіта:</span>
+                        <p class="block-about-teacher__experience">прикладна математика КПІ</p>
+                    </div>
+                </div>
+                <div class="section-our-teachers__block-about-teacher block-about-teacher">
+                    <img class="block-about-teacher__img-teacher" src="./img/main/teacher.png" alt="teacher">
+                    <h4 class="block-about-teacher__name">Андрій Стулішенко, 25 років</h4>
+                    <span class="block-about-teacher__grade"></span>
+                    <div class="block-about-teacher__basic-info">
+                        <span class="block-about-teacher__info">Спеціалізація:</span>
+                        <p class="block-about-teacher__experience">математика (алгебра, геометрія)</p>
+                    </div>
+                    <div class="block-about-teacher__basic-info">
+                        <span class="block-about-teacher__info">Досвід:</span>
+                        <p class="block-about-teacher__experience">5 років викладання</p>
+                    </div>
+                    <div class="block-about-teacher__basic-info">
+                        <span class="block-about-teacher__info">Ocвіта:</span>
+                        <p class="block-about-teacher__experience">прикладна математика КПІ</p>
+                    </div>
+                </div>
+                <div class="section-our-teachers__block-about-teacher block-about-teacher">
                     <img class="block-about-teacher__img-teacher" src="./img/main/teacher.png" alt="teacher">
                     <h4 class="block-about-teacher__name">Андрій Стулішенко, 25 років</h4>
                     <span class="block-about-teacher__grade"></span>
@@ -175,6 +227,49 @@
             </div>
             <div class="section-our-teachers__block-btn-teacher">
                 <button class="section-our-teachers__btn-teacher btn-teacher--show">Інші викладачі</button>
+            </div>
+        </div>
+            <div class="section-our-teachers__block-btn">
+                <button class="section-our-teachers__btn">Записатись</button>
+            </div>
+        </div>
+    </section>
+    <section class="main__section-comment section-comment">
+        <div class="section-comment__wrapper container">
+            <h2 class="section-comment__title-text">Відгуки</h2>
+            <div class="section-comment__sliders">
+                <div class="section-comment__slide slide">
+                    <img class="slide__img-avatar" src="./img/main/avatar-comment.png" alt="avatar">
+                    <div class="slide__info">
+                        <span class="slide__name">Анна</span>
+                        <span class="slide__grade"></span>
+                    </div>
+                    <img class="slide__img-comment" src="./img/main/comment.png" alt="comment">
+                </div>
+                <div class="section-comment__slide slide">
+                    <img class="slide__img-avatar" src="./img/main/avatar-comment.png" alt="avatar">
+                    <div class="slide__info">
+                        <span class="slide__name">Анна</span>
+                        <span class="slide__grade"></span>
+                    </div>
+                    <img class="slide__img-comment" src="./img/main/comment.png" alt="comment">
+                </div>
+                <div class="section-comment__slide slide">
+                    <img class="slide__img-avatar" src="./img/main/avatar-comment.png" alt="avatar">
+                    <div class="slide__info">
+                        <span class="slide__name">Анна</span>
+                        <span class="slide__grade"></span>
+                    </div>
+                    <img class="slide__img-comment" src="./img/main/comment.png" alt="comment">
+                </div>
+                <div class="section-comment__slide slide">
+                    <img class="slide__img-avatar" src="./img/main/avatar-comment.png" alt="avatar">
+                    <div class="slide__info">
+                        <span class="slide__name">Анна</span>
+                        <span class="slide__grade"></span>
+                    </div>
+                    <img class="slide__img-comment" src="./img/main/comment.png" alt="comment">
+                </div>
             </div>
         </div>
     </section>
