--- a/src/html/_main.html
+++ b/src/html/_main.html
@@ -237,6 +237,7 @@
     <section class="main__section-comment section-comment">
         <div class="section-comment__wrapper container">
             <h2 class="section-comment__title-text">Відгуки</h2>
+            <div class="section-comment__wrapper-sliders">
             <div class="section-comment__sliders">
                 <div class="section-comment__slide slide">
                     <img class="slide__img-avatar" src="./img/main/avatar-comment.png" alt="avatar">
@@ -272,5 +273,6 @@
                 </div>
             </div>
         </div>
+    </div>
     </section>
 </main>
