start work section-questionnaire

--- a/src/html/_main.html
+++ b/src/html/_main.html
@@ -273,6 +273,24 @@
                 </div>
             </div>
         </div>
+        <div class="section-comment__wrapper-additional-btn">
+            <button class="section-comment__additional-btn">Переглянути Google відгуки</button>
+        </div>
     </div>
+    </section>
+    <section class="main__section-questionnaire section-questionnaire">
+        <img src="" alt="">
+        <form action="#">
+            <label>
+                <input type="text" name="" id="">
+            </label>
+            <label>
+                <input type="tel" name="" id="">
+            </label>
+            <select name="" id="">
+
+            </select>
+            <button type="submit"></button>
+        </form>
     </section>
 </main>
