section-with-girl

--- a/src/html/_main.html
+++ b/src/html/_main.html
@@ -19,43 +19,43 @@
             <div class="section-why-we__block-with-all-cause">
                 <div class="section-why-we__block-cause">
                     <picture>
-                        <source srcset="./img/main/globe.svg" type="image/webp">
-                        <img class="section-why-we__icon" src="./img/main/globe.svg" alt="globe">
+                        <source srcset="./img/main/section-why-we/globe.svg" type="image/webp">
+                        <img class="section-why-we__icon" src="./img/main/section-why-we/globe.svg" alt="globe">
                     </picture>
                     <p class="section-why-we__text">Офлайн та онлайн заняття</p>
                 </div>
                 <div class="section-why-we__block-cause">
                     <picture>
-                        <source srcset="./img/main/student.svg" type="image/webp">
-                        <img class="section-why-we__icon" src="./img/main/student.svg" alt="student">
+                        <source srcset="./img/main/section-why-we/student.svg" type="image/webp">
+                        <img class="section-why-we__icon" src="./img/main/section-why-we/student.svg" alt="student">
                     </picture>
                     <p class="section-why-we__text">Досвідчені та націлені на результат викладачі</p>
                 </div>
                 <div class="section-why-we__block-cause">
                     <picture>
-                        <source srcset="./img/main/pan.svg" type="image/webp">
-                        <img class="section-why-we__icon" src="./img/main/pan.svg" alt="pan">
+                        <source srcset="./img/main/section-why-we/pan.svg" type="image/webp">
+                        <img class="section-why-we__icon" src="./img/main/section-why-we/pan.svg" alt="pan">
                     </picture>
                     <p class="section-why-we__text">Індивідуальні програми для кожного учня</p>
                 </div>
                 <div class="section-why-we__block-cause">
                     <picture>
-                        <source srcset="./img/main/medal.svg" type="image/webp">
-                        <img class="section-why-we__icon" src="./img/main/medal.svg" alt="medal">
+                        <source srcset="./img/main/section-why-we/medal.svg" type="image/webp">
+                        <img class="section-why-we__icon" src="./img/main/section-why-we/medal.svg" alt="medal">
                     </picture>
                     <p class="section-why-we__text">Система мотивації для учнів</p>
                 </div>
                 <div class="section-why-we__block-cause">
                     <picture>
-                        <source srcset="./img/main/clock.svg" type="image/webp">
-                        <img class="section-why-we__icon" src="./img/main/clock.svg" alt="clock">
+                        <source srcset="./img/main/section-why-we/clock.svg" type="image/webp">
+                        <img class="section-why-we__icon" src="./img/main/section-why-we/clock.svg" alt="clock">
                     </picture>
                     <p class="section-why-we__text">Графік, який обираєте ви самі</p>
                 </div>
                 <div class="section-why-we__block-cause">
                     <picture>
-                        <source srcset="./img/main/cards.svg" type="image/webp">
-                        <img class="section-why-we__icon" src="./img/main/cards.svg" alt="cards">
+                        <source srcset="./img/main/section-why-we/cards.svg" type="image/webp">
+                        <img class="section-why-we__icon" src="./img/main/section-why-we/cards.svg" alt="cards">
                     </picture>
                     <p class="section-why-we__text">Зручна оплата</p>
                 </div>
@@ -67,30 +67,30 @@
             <h2 class="section-info-join__title-text">Як приєднатись до нас?</h2>
             <div class="section-info-join__block-with-description-actions ">
                 <div class="section-info-join__block-with-action">
-                    <img class="section-info-join__img-info" src="./img/main/bell.svg" alt="bell">
+                    <img class="section-info-join__img-info" src="./img/main/section-info-join/bell.svg" alt="bell">
                     <span class="section-info-join__number-actions">1</span>
                     <p class="section-info-join__description-text">1. Залиште заявку на сайті для безкоштовної
                         консультації по телефону</p>
                 </div>
                 <div class="section-info-join__block-with-action">
-                    <img class="section-info-join__img-info" src="./img/main/date-and-time.svg" alt="date-and-time">
+                    <img class="section-info-join__img-info" src="./img/main/section-info-join/date-and-time.svg" alt="date-and-time">
                     <span class="section-info-join__number-actions">2</span>
                     <p class="section-info-join__description-text">2. Оберіть місце, дату та час проведення вступного
                         заняття з репетитором</p>
                 </div>
                 <div class="section-info-join__block-with-action">
-                    <img class="section-info-join__img-info" src="./img/main/testing.svg" alt="testing">
+                    <img class="section-info-join__img-info" src="./img/main/section-info-join/testing.svg" alt="testing">
                     <span class="section-info-join__number-actions">3</span>
                     <p class="section-info-join__description-text">3. Пройдіть тестування, отримайте результат та
                         рекомендації по навчанню</p>
                 </div>
                 <div class="section-info-join__block-with-action">
-                    <img class="section-info-join__img-info" src="./img/main/welcome.svg" alt="welcome">
+                    <img class="section-info-join__img-info" src="./img/main/section-info-join/welcome.svg" alt="welcome">
                     <span class="section-info-join__number-actions">4</span>
                     <p class="section-info-join__description-text">4. Складіть зручний графік навчання і ласкаво просимо
                         в сім’ю Math Corporation</p>
                 </div>
-                <img class="section-info-join__dotted-line" src="./img/main/desktop/dotted-line.svg" alt="dotted-line">
+                <img class="section-info-join__dotted-line" src="./img/main/desktop/section-info-join/dotted-line.svg" alt="dotted-line">
             </div>
             <div class="section-info-join__wrapper-for-btn">
                 <button class="section-info-join__btn">Записатись</button>
@@ -103,13 +103,13 @@
             <p class="section-with-prices__under-text">Оберіть предмет, щоб спробувати нашу методику навчання</p>
             <div class="section-with-prices__block-prices">
                 <div class="section-with-prices__block-price block-price">
-                    <img class="block-price__img" src="./img/main/mathematics-img.svg" alt="mathematics">
+                    <img class="block-price__img" src="./img/main/section-with-prices/mathematics-img.svg" alt="mathematics">
                     <p class="block-price__thing">Математика (алгебра, геометрія)</p>
                     <span class="block-price__price">300 грн/год</span>
                     <button class="block-price__btn">Хочу спробувати</button>
                 </div>
                 <div class="section-with-prices__block-price block-price block-price--height">
-                    <img class="block-price__img" src="./img/main/physics.svg" alt="physics">
+                    <img class="block-price__img" src="./img/main/section-with-prices/physics.svg" alt="physics">
                     <p class="block-price__thing">Математика (алгебра, геометрія)</p>
                     <span class="block-price__price">300 грн/год</span>
                     <button class="block-price__btn">Хочу спробувати</button>
@@ -123,7 +123,7 @@
             <div class="section-our-teachers__wrapper-blocks-with-info-teacher">
             <div class="section-our-teachers__blocks-with-info-teacher">
                 <div class="section-our-teachers__block-about-teacher block-about-teacher block-about-teacher--active">
-                    <img class="block-about-teacher__img-teacher" src="./img/main/teacher.png" alt="teacher">
+                    <img class="block-about-teacher__img-teacher" src="./img/main/section-our-teachers/teacher.png" alt="teacher">
                     <h4 class="block-about-teacher__name">Андрій Стулішенко, 25 років</h4>
                     <span class="block-about-teacher__grade"></span>
                     <div class="block-about-teacher__basic-info">
@@ -140,7 +140,7 @@
                     </div>
                 </div>
                 <div class="section-our-teachers__block-about-teacher block-about-teacher">
-                    <img class="block-about-teacher__img-teacher" src="./img/main/teacher.png" alt="teacher">
+                    <img class="block-about-teacher__img-teacher" src="./img/main/section-our-teachers/teacher.png" alt="teacher">
                     <h4 class="block-about-teacher__name">Андрій Стулішенко, 25 років</h4>
                     <span class="block-about-teacher__grade"></span>
                     <div class="block-about-teacher__basic-info">
@@ -157,7 +157,7 @@
                     </div>
                 </div>
                 <div class="section-our-teachers__block-about-teacher block-about-teacher">
-                    <img class="block-about-teacher__img-teacher" src="./img/main/teacher.png" alt="teacher">
+                    <img class="block-about-teacher__img-teacher" src="./img/main/section-our-teachers/teacher.png" alt="teacher">
                     <h4 class="block-about-teacher__name">Андрій Стулішенко, 25 років</h4>
                     <span class="block-about-teacher__grade"></span>
                     <div class="block-about-teacher__basic-info">
@@ -174,7 +174,7 @@
                     </div>
                 </div>
                 <div class="section-our-teachers__block-about-teacher block-about-teacher">
-                    <img class="block-about-teacher__img-teacher" src="./img/main/teacher.png" alt="teacher">
+                    <img class="block-about-teacher__img-teacher" src="./img/main/section-our-teachers/teacher.png" alt="teacher">
                     <h4 class="block-about-teacher__name">Андрій Стулішенко, 25 років</h4>
                     <span class="block-about-teacher__grade"></span>
                     <div class="block-about-teacher__basic-info">
@@ -191,7 +191,7 @@
                     </div>
                 </div>
                 <div class="section-our-teachers__block-about-teacher block-about-teacher">
-                    <img class="block-about-teacher__img-teacher" src="./img/main/teacher.png" alt="teacher">
+                    <img class="block-about-teacher__img-teacher" src="./img/main/section-our-teachers/teacher.png" alt="teacher">
                     <h4 class="block-about-teacher__name">Андрій Стулішенко, 25 років</h4>
                     <span class="block-about-teacher__grade"></span>
                     <div class="block-about-teacher__basic-info">
@@ -208,7 +208,7 @@
                     </div>
                 </div>
                 <div class="section-our-teachers__block-about-teacher block-about-teacher">
-                    <img class="block-about-teacher__img-teacher" src="./img/main/teacher.png" alt="teacher">
+                    <img class="block-about-teacher__img-teacher" src="./img/main/section-our-teachers/teacher.png" alt="teacher">
                     <h4 class="block-about-teacher__name">Андрій Стулішенко, 25 років</h4>
                     <span class="block-about-teacher__grade"></span>
                     <div class="block-about-teacher__basic-info">
@@ -240,36 +240,36 @@
             <div class="section-comment__wrapper-sliders">
             <div class="section-comment__sliders">
                 <div class="section-comment__slide slide">
-                    <img class="slide__img-avatar" src="./img/main/avatar-comment.png" alt="avatar">
+                    <img class="slide__img-avatar" src="./img/main/section-comment/avatar-comment.png" alt="avatar">
                     <div class="slide__info">
                         <span class="slide__name">Анна</span>
                         <span class="slide__grade"></span>
                     </div>
-                    <img class="slide__img-comment" src="./img/main/comment.png" alt="comment">
+                    <img class="slide__img-comment" src="./img/main/section-comment/comment.png" alt="comment">
                 </div>
                 <div class="section-comment__slide slide">
-                    <img class="slide__img-avatar" src="./img/main/avatar-comment.png" alt="avatar">
+                    <img class="slide__img-avatar" src="./img/main/section-comment/avatar-comment.png" alt="avatar">
                     <div class="slide__info">
                         <span class="slide__name">Анна</span>
                         <span class="slide__grade"></span>
                     </div>
-                    <img class="slide__img-comment" src="./img/main/comment.png" alt="comment">
+                    <img class="slide__img-comment" src="./img/main/section-comment/comment.png" alt="comment">
                 </div>
                 <div class="section-comment__slide slide">
-                    <img class="slide__img-avatar" src="./img/main/avatar-comment.png" alt="avatar">
+                    <img class="slide__img-avatar" src="./img/main/section-comment/avatar-comment.png" alt="avatar">
                     <div class="slide__info">
                         <span class="slide__name">Анна</span>
                         <span class="slide__grade"></span>
                     </div>
-                    <img class="slide__img-comment" src="./img/main/comment.png" alt="comment">
+                    <img class="slide__img-comment" src="./img/main/section-comment/comment.png" alt="comment">
                 </div>
                 <div class="section-comment__slide slide">
-                    <img class="slide__img-avatar" src="./img/main/avatar-comment.png" alt="avatar">
+                    <img class="slide__img-avatar" src="./img/main/section-comment/avatar-comment.png" alt="avatar">
                     <div class="slide__info">
                         <span class="slide__name">Анна</span>
                         <span class="slide__grade"></span>
                     </div>
-                    <img class="slide__img-comment" src="./img/main/comment.png" alt="comment">
+                    <img class="slide__img-comment" src="./img/main/section-comment/comment.png" alt="comment">
                 </div>
             </div>
         </div>
@@ -279,18 +279,25 @@
     </div>
     </section>
     <section class="main__section-questionnaire section-questionnaire">
-        <img src="" alt="">
-        <form action="#">
-            <label>
-                <input type="text" name="" id="">
+        <div class="section-questionnaire__wrapper container">
+        <div class="section-questionnaire__block-with-girl">
+            <div class="section-questionnaire__word-bubble word-bubble">
+                <p class="word-bubble__text text">Ознайомились з інформацією і бажаєте записатись на <span class="text__dedicated">безкоштовний урок</span> прямо зараз?</p>
+            </div>
+            <img class="section-questionnaire__img" src="./img/main/section-questionnaire/girl.svg" alt="img-girl">
+        </div>
+        <form action="#" class="section-questionnaire__form form">
+            <label class="form__label">Ім’я
+                <input class="form__input" type="text" name="userName">
             </label>
-            <label>
-                <input type="tel" name="" id="">
+            <label class="form__label">Телефон
+                <input class="form__input" type="tel"  placeholder="+ 380 (067) 234 56 78" name="userTel">
             </label>
-            <select name="" id="">
-
-            </select>
-            <button type="submit"></button>
+            <label class="form__label">В який класс ходить ваша дитина?</label>
+                <div id="select"></div>
+            
+            <button disabled='true' type="submit" class="form__btn">Записатись</button>
         </form>
+    </div>
     </section>
 </main>
