--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.min.css">
     <title>Document</title>
 </head>
@@ -12,16 +13,7 @@
 <body class="stop-scroll">
     @@include('_header.html')
     @@include('_main.html')
-    <!-- <div class="social-network">
-      <nav class="social-network__block">
-        <span class="social-network__all"></span>
-        <ul class="social-network__list">
-          <li class="social-network__item"><a class="social-network__link social-network__link--facebook" href="https://www.facebook.com/"></a></li>
-          <li class="social-network__item"><a class="social-network__link social-network__link--instagram" href="https://www.instagram.com/?hl=ru"></a></li>
-          <li class="social-network__item"><a class="social-network__link social-network__link--twitter" href="https://twitter.com/?lang=ru"></a></li>
-        </ul>
-      </nav>
-    </div> -->
+    @@include('_footer.html')
     <script src="./js/script.min.js"></script>
 </body>
 </html>
